--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+This tweak adds a hit counter to dmenu.
+
+Original README below.
+
 dmenu - dynamic menu
 ====================
 dmenu is an efficient dynamic menu for X.
