Case insensitive by default.

--- a/dmenu.1
+++ b/dmenu.1
@@ -46,7 +46,7 @@ dmenu grabs the keyboard before reading stdin.  This is faster, but will lock up
 X until stdin reaches end\-of\-file.
 .TP
 .B \-i
-dmenu matches menu items case insensitively.
+dmenu matches menu items case sensitively.
 .TP
 .BI \-l " lines"
 dmenu lists items vertically, with the given number of lines.
